personal info for patients

--- a/Staff Analysis/Analysis/3. Correlation Analysis/Parameter9_Analysis.ipynb
+++ b/Staff Analysis/Analysis/3. Correlation Analysis/Parameter9_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "90313e37",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "48378195",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "f9045208",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "7c35e898",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "5.0                                           0.141667                                                            "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "13bde5e7",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_52755/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_58691/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "c1e8b94b",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "a89d8d09",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "max                                             5.000000                                                            "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "802d82c3",
    "metadata": {},
    "outputs": [],
@@ -414,10 +414,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "898d3566",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -432,7 +441,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "bf66fb9a",
    "metadata": {},
    "outputs": [],
@@ -461,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "7a5d0efc",
    "metadata": {},
    "outputs": [],
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "0c1fd138",
    "metadata": {},
    "outputs": [
@@ -512,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "33020013",
    "metadata": {
     "scrolled": true
@@ -533,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "17da153d",
    "metadata": {},
    "outputs": [],
@@ -559,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "8e76b708",
    "metadata": {},
    "outputs": [],
@@ -569,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "a9299146",
    "metadata": {},
    "outputs": [],
@@ -582,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "d5523f7a",
    "metadata": {},
    "outputs": [],
@@ -594,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "4c5f939f",
    "metadata": {},
    "outputs": [
@@ -617,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "651ea68f",
    "metadata": {},
    "outputs": [
@@ -653,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "fa76e1f0",
    "metadata": {},
    "outputs": [],
@@ -669,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "4ba78ffd",
    "metadata": {},
    "outputs": [
@@ -692,7 +701,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "8fa67e69",
    "metadata": {},
    "outputs": [
@@ -727,7 +736,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "a7747b8a",
    "metadata": {},
    "outputs": [],
@@ -767,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "3e95c52a",
    "metadata": {},
    "outputs": [
@@ -777,7 +786,7 @@
        "F_onewayResult(statistic=4.314366909373632, pvalue=0.002202518786436168)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "d774d968",
    "metadata": {},
    "outputs": [
@@ -824,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "3438e395",
    "metadata": {},
    "outputs": [],
@@ -840,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "e9d971b6",
    "metadata": {},
    "outputs": [
@@ -861,7 +870,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "82194011",
    "metadata": {},
    "outputs": [
@@ -894,7 +903,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "bf93f7fa",
    "metadata": {},
    "outputs": [],
@@ -930,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "cd0fb052",
    "metadata": {},
    "outputs": [
@@ -957,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "d4920e00",
    "metadata": {},
    "outputs": [
@@ -967,7 +976,7 @@
        "F_onewayResult(statistic=8.263956009683119, pvalue=0.0003404782776467161)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "e82ed474",
    "metadata": {},
    "outputs": [],
@@ -996,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "7da4d47a",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "b0901765",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "012a00f8",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "3a50a2bc",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "229064dd",
    "metadata": {},
    "outputs": [],
@@ -1089,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "31133203",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "85badee9",
    "metadata": {},
    "outputs": [],
@@ -1115,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "id": "38db7033",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "id": "6541ebb6",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "id": "65f2472b",
    "metadata": {},
    "outputs": [],
@@ -1182,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "id": "26e67532",
    "metadata": {},
    "outputs": [],
@@ -1196,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "id": "bc4fb4e3",
    "metadata": {},
    "outputs": [],
@@ -1208,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "id": "f3a364c8",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "id": "9774223c",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "id": "250e6ca1",
    "metadata": {},
    "outputs": [],
@@ -1275,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "id": "42bccf56",
    "metadata": {},
    "outputs": [],
@@ -1288,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "id": "70041cde",
    "metadata": {},
    "outputs": [],
@@ -1300,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "id": "5cdfd994",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 51,
    "id": "bdb2e844",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "id": "79554939",
    "metadata": {},
    "outputs": [
@@ -6050,7 +6059,7 @@
        "243                                  2. Ειδικός ιατρός  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6061,7 +6070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "id": "4c367ac7",
    "metadata": {},
    "outputs": [],
@@ -6073,7 +6082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "id": "15f91f18",
    "metadata": {},
    "outputs": [
@@ -8434,7 +8443,7 @@
        "243   3.00  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8447,7 +8456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "id": "694d904f",
    "metadata": {},
    "outputs": [
@@ -8475,7 +8484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "id": "03fc0c50",
    "metadata": {},
    "outputs": [],
@@ -8491,7 +8500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "id": "4248c2a3",
    "metadata": {},
    "outputs": [
@@ -8886,7 +8895,7 @@
        "229                 0                       0  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8897,7 +8906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "id": "88e5225b",
    "metadata": {},
    "outputs": [],
@@ -8909,7 +8918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "id": "0b8e7bad",
    "metadata": {},
    "outputs": [
@@ -8922,8 +8931,8 @@
       "Dep. Variable:                  score   R-squared:                       0.745\n",
       "Model:                            OLS   Adj. R-squared:                  0.638\n",
       "Method:                 Least Squares   F-statistic:                     7.004\n",
-      "Date:                Fri, 23 Dec 2022   Prob (F-statistic):            0.00280\n",
-      "Time:                        11:02:45   Log-Likelihood:                -9.2309\n",
+      "Date:                Tue, 27 Dec 2022   Prob (F-statistic):            0.00280\n",
+      "Time:                        12:03:32   Log-Likelihood:                -9.2309\n",
       "No. Observations:                  18   AIC:                             30.46\n",
       "Df Residuals:                      12   BIC:                             35.80\n",
       "Df Model:                           5                                         \n",
