--- a/Patient Analysis/Data Analysis for PMOS.ipynb
+++ b/Patient Analysis/Data Analysis for PMOS.ipynb
@@ -10,20 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "id": "8158183b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
-      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
-      "  return warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -32,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "id": "eb0780d6",
    "metadata": {},
    "outputs": [],
@@ -42,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "id": "deac8932",
    "metadata": {},
    "outputs": [
@@ -403,7 +393,7 @@
        "[173 rows x 41 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "id": "1e8c3e29",
    "metadata": {},
    "outputs": [
@@ -444,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "id": "daf78279",
    "metadata": {},
    "outputs": [],
@@ -466,20 +456,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "id": "27d58eb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# parameter 1\n",
-    "parameter_1 = patients_questions[:][['q3','q28','q13','q19','q24']] # reverse q19\n",
-    "parameter_1 = my_reverse(parameter_1,'q19')\n",
+    "par_1 =patients_questions[:][['q3','q28','q13','q19','q24']] # reverse q19\n",
     "#parameter_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "id": "2c845e19",
    "metadata": {},
    "outputs": [
@@ -487,86 +476,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.7031206254549527\n"
+      "Cronabachs alpha for parameter 1:  0.7031206254549527\n",
+      "Stored 'par_1' (DataFrame)\n"
      ]
     }
    ],
    "source": [
+    "par_1 = my_reverse(par_1,'q19')\n",
     "#calculate cronabachs alpha\n",
-    "ca = pg.cronbach_alpha(data=parameter_1)\n",
-    "print(\"Cronabachs alpha for parameter 1: \",ca[0])"
+    "ca = pg.cronbach_alpha(data=par_1)\n",
+    "print(\"Cronabachs alpha for parameter 1: \",ca[0])\n",
+    "\n",
+    "%store par_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "id": "c89ff717",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parameter 2\n",
-    "parameter_2 = patients_questions[:][['q2','q4','q22','q25','q24']] # reverse q4 q22\n",
-    "parameter_2 = my_reverse(parameter_2,'q4')\n",
-    "parameter_2 = my_reverse(parameter_2,'q22')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b8213dbe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cronabachs alpha for parameter 1:  0.4531557253063076\n"
-     ]
-    }
-   ],
-   "source": [
-    "#calculate cronabachs alpha\n",
-    "ca = pg.cronbach_alpha(data=parameter_2)\n",
-    "print(\"Cronabachs alpha for parameter 1: \",ca[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "48ec1f95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parameter 3\n",
-    "parameter_3 = patients_questions[:][['q23','q29','q27']] \n",
-    "parameter_3 = my_reverse(parameter_3,'q23')\n",
-    "parameter_3 = my_reverse(parameter_3,'q29')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "12309755",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cronabachs alpha for parameter 1:  0.008880719744606635\n"
-     ]
-    }
-   ],
-   "source": [
-    "#calculate cronabachs alpha\n",
-    "ca = pg.cronbach_alpha(data=parameter_3)\n",
-    "print(\"Cronabachs alpha for parameter 1: \",ca[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "670dae44",
    "metadata": {},
    "outputs": [
     {
@@ -590,40 +517,46 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>q23</th>\n",
-       "      <th>q29</th>\n",
-       "      <th>q27</th>\n",
+       "      <th>q2</th>\n",
+       "      <th>q4</th>\n",
+       "      <th>q22</th>\n",
+       "      <th>q25</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -631,71 +564,147 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>168</th>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>170</th>\n",
-       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>171</th>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>172</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>173 rows × 3 columns</p>\n",
+       "<p>173 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     q23  q29  q27\n",
-       "0      4    4    4\n",
-       "1      3    4    2\n",
-       "2      4    4    5\n",
-       "3      4    4    5\n",
-       "4      4    4    5\n",
-       "..   ...  ...  ...\n",
-       "168    2    2    3\n",
-       "169    3    1    4\n",
-       "170    3    1    4\n",
-       "171    5    4    5\n",
-       "172    4    2    2\n",
+       "     q2  q4  q22  q25\n",
+       "0     4   3    2    5\n",
+       "1     5   2    2    5\n",
+       "2     5   2    1    5\n",
+       "3     4   2    1    5\n",
+       "4     4   2    1    5\n",
+       "..   ..  ..  ...  ...\n",
+       "168   5   2    2    4\n",
+       "169   5   5    2    5\n",
+       "170   5   2    1    4\n",
+       "171   5   5    1    5\n",
+       "172   5   2    2    4\n",
        "\n",
-       "[173 rows x 3 columns]"
+       "[173 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parameter_3"
+    "# parameter 2\n",
+    "par_2 = patients_questions[:][['q2','q4','q22','q25']] # reverse q4 q22\n",
+    "par_2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
+   "id": "b8213dbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cronabachs alpha for parameter 1:  0.37111288449435875\n",
+      "Stored 'par_2' (DataFrame)\n"
+     ]
+    }
+   ],
+   "source": [
+    "par_2 = my_reverse(par_2,'q4')\n",
+    "par_2 = my_reverse(par_2,'q22')\n",
+    "\n",
+    "#calculate cronabachs alpha\n",
+    "ca = pg.cronbach_alpha(data=par_2)\n",
+    "print(\"Cronabachs alpha for parameter 1: \",ca[0])\n",
+    "\n",
+    "%store par_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "48ec1f95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'par_3' (DataFrame)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# parameter 3\n",
+    "par_3 = patients_questions[:][['q23','q29','q27']] \n",
+    "par_3 = my_reverse(par_3,'q23')\n",
+    "\n",
+    "%store par_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "12309755",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cronabachs alpha for parameter 1:  0.4486927421041622\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculate cronabachs alpha\n",
+    "ca = pg.cronbach_alpha(data=par_3)\n",
+    "print(\"Cronabachs alpha for parameter 1: \",ca[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "id": "d1893a62",
    "metadata": {},
    "outputs": [
@@ -723,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 112,
    "id": "0d3a528b",
    "metadata": {},
    "outputs": [
@@ -731,209 +740,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.6445862759959982\n"
+      "Cronabachs alpha for parameter 1:  0.6445862759959982\n",
+      "Stored 'par_4' (DataFrame)\n"
      ]
     }
    ],
    "source": [
     "#calculate cronabachs alpha\n",
     "ca = pg.cronbach_alpha(data=parameter_4)\n",
-    "print(\"Cronabachs alpha for parameter 1: \",ca[0])"
+    "print(\"Cronabachs alpha for parameter 1: \",ca[0])\n",
+    "par_4 = parameter_4\n",
+    "\n",
+    "%store par_4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0aab9a3f",
+   "execution_count": 113,
+   "id": "61acb01f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>q11</th>\n",
-       "      <th>q10</th>\n",
-       "      <th>q9</th>\n",
-       "      <th>q15</th>\n",
-       "      <th>q16</th>\n",
-       "      <th>q17</th>\n",
-       "      <th>q18</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>173 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     q11  q10   q9  q15  q16  q17  q18\n",
-       "0      5    5  3.0    4    4    5    4\n",
-       "1      4    5  4.0    2    4    4    2\n",
-       "2      5    5  4.0    4    4    5    4\n",
-       "3      5    4  1.0    4    4    5    1\n",
-       "4      5    4  1.0    4    4    5    1\n",
-       "..   ...  ...  ...  ...  ...  ...  ...\n",
-       "168    5    5  1.0    4    4    4    4\n",
-       "169    5    5  1.0    4    4    4    1\n",
-       "170    5    4  2.0    3    3    4    5\n",
-       "171    5    5  1.0    5    5    5    5\n",
-       "172    4    4  4.0    4    4    4    4\n",
-       "\n",
-       "[173 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'par_5' (DataFrame)\n"
+     ]
     }
    ],
    "source": [
-    "parameter_4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "61acb01f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# parameter 5\n",
     "parameter_5 = patients_questions[:][['q30','q5']] \n",
-    "\n"
+    "\n",
+    "par_5 = parameter_5\n",
+    "%store par_5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 114,
    "id": "c4373271",
    "metadata": {},
    "outputs": [
@@ -956,28 +801,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "5c3f4cb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#parameter_5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "id": "e62b3bc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'par_6' (DataFrame)\n"
+     ]
+    }
+   ],
    "source": [
     "# parameter 6\n",
-    "parameter_6 = patients_questions[:][['q6','q12','q20','q26']] \n"
+    "parameter_6 = patients_questions[:][['q6','q12','q20','q26']] \n",
+    "par_6 = parameter_6\n",
+    "%store par_6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 116,
    "id": "b07a1f99",
    "metadata": {},
    "outputs": [
@@ -997,34 +842,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8c42691f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#parameter_6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 117,
    "id": "c63f3440",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'par_7' (DataFrame)\n"
+     ]
+    }
+   ],
    "source": [
     "# parameter 7\n",
-    "parameter_7 = patients_questions[:][['q7','q14']] \n"
+    "parameter_7 = patients_questions[:][['q7','q14']] \n",
+    "par_7 = parameter_7\n",
+    "%store par_7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 118,
    "id": "0010ce3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'par_8' (DataFrame)\n"
+     ]
+    }
+   ],
    "source": [
     "# parameter 8\n",
-    "parameter_7 = patients_questions[:][['q21','q8']] \n"
+    "parameter_8 = patients_questions[:][['q21','q8']] \n",
+    "par_8 = parameter_8\n",
+    "%store par_8"
    ]
   },
   {
