--- a/Patient Analysis/Data Analysis for PMOS.ipynb
+++ b/Patient Analysis/Data Analysis for PMOS.ipynb
@@ -10,10 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "id": "8158183b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -22,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "id": "eb0780d6",
    "metadata": {},
    "outputs": [],
@@ -32,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "id": "deac8932",
    "metadata": {},
    "outputs": [
@@ -393,7 +406,7 @@
        "[173 rows x 41 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "id": "1e8c3e29",
    "metadata": {},
    "outputs": [
@@ -434,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "id": "daf78279",
    "metadata": {},
    "outputs": [],
@@ -456,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "id": "27d58eb8",
    "metadata": {},
    "outputs": [],
@@ -468,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "id": "2c845e19",
    "metadata": {},
    "outputs": [
@@ -492,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "id": "c89ff717",
    "metadata": {},
    "outputs": [
@@ -623,7 +636,7 @@
        "[173 rows x 4 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "id": "b8213dbe",
    "metadata": {},
    "outputs": [
@@ -662,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "id": "48ec1f95",
    "metadata": {},
    "outputs": [
@@ -684,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "id": "12309755",
    "metadata": {},
    "outputs": [
@@ -704,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "id": "d1893a62",
    "metadata": {},
    "outputs": [
@@ -732,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "id": "0d3a528b",
    "metadata": {},
    "outputs": [
@@ -756,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "id": "61acb01f",
    "metadata": {},
    "outputs": [
@@ -778,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "id": "c4373271",
    "metadata": {},
    "outputs": [
@@ -801,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "id": "e62b3bc6",
    "metadata": {},
    "outputs": [
@@ -822,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "id": "b07a1f99",
    "metadata": {},
    "outputs": [
@@ -842,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "id": "c63f3440",
    "metadata": {},
    "outputs": [
@@ -863,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "id": "0010ce3d",
    "metadata": {},
    "outputs": [
