fixes for incrimenting values

--- a/Patient Analysis/Positive Answer Charts for every Questione and Parameter.ipynb
+++ b/Patient Analysis/Positive Answer Charts for every Questione and Parameter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 117,
    "id": "18cca55d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 118,
    "id": "629ce6c2",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 119,
    "id": "0beac42d",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 120,
    "id": "2a9cbd96",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 121,
    "id": "2d7b45c0",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 122,
    "id": "2f32d525",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 123,
    "id": "90f7c636",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 124,
    "id": "363f6359",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 125,
    "id": "07d3d283",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "1  0.011561  0.005780"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 126,
    "id": "3b8fad81",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 127,
    "id": "80beedfc",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 128,
    "id": "9f45c570",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "1  0.005780  0.005780"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 129,
    "id": "f1314da4",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 130,
    "id": "6787cae9",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        " 0.5809248554913296]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 131,
    "id": "1ab34e92",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        " 58.09248554913295]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 132,
    "id": "49b0536d",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 133,
    "id": "cad87265",
    "metadata": {},
    "outputs": [],
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 134,
    "id": "78a126bc",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 135,
    "id": "7da2831b",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 136,
    "id": "4070dbea",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "6       NaN  0.011561       NaN       NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 137,
    "id": "438f6aa9",
    "metadata": {},
    "outputs": [
@@ -793,12 +793,12 @@
     "title = 'Πρόσβαση σε Πόρους'\n",
     "par = ['E23','E29','E27']\n",
     "\n",
-    "my_graph(par,positive_answers3,title,1)"
+    "my_graph(par,positive_answers3,title,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 138,
    "id": "d93d2607",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
        "6  0.011561  0.005780  0.034682"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 139,
    "id": "c4e439cf",
    "metadata": {},
    "outputs": [
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 140,
    "id": "5fde7dc1",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
        "6.0       NaN       NaN  0.023256  0.034682  0.011561  0.017341  0.005780"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 141,
    "id": "1f521f3d",
    "metadata": {},
    "outputs": [
@@ -1065,12 +1065,12 @@
     "title = 'Ροή Πληροφοριών '\n",
     "par = ['E30','E5']\n",
     "\n",
-    "my_graph(par,positive_answers5,title,0)"
+    "my_graph(par,positive_answers5,title,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 142,
    "id": "8392b4cd",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1144,7 @@
        "1  0.011561  0.005780"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 143,
    "id": "ceb15684",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 144,
    "id": "f4cbbcae",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1274,7 @@
        "6.0  0.023256  0.046243       NaN  0.011561"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 145,
    "id": "e1e03ff0",
    "metadata": {},
    "outputs": [
@@ -1304,8 +1304,9 @@
    ],
    "source": [
     "#7\n",
-    "relative_frequencies = par_7.apply(lambda x: x.value_counts(normalize=True))\n",
-    "positive_answers7 = relative_frequencies.iloc[0] + relative_frequencies.iloc[1]\n",
+    "relative_frequencies = par_7.apply(lambda x: x.value_counts(normalize=True)).sort_index()\n",
+    "\n",
+    "positive_answers7 = relative_frequencies.iloc[3:5].sum()\n",
     "\n",
     "title = 'Εκπαίδευση Προσωπικού'\n",
     "par = ['E7','E14']\n",
@@ -1315,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 146,
    "id": "789eaf2e",
    "metadata": {},
    "outputs": [
@@ -1346,24 +1347,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.502890</td>\n",
-       "      <td>0.473988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.398844</td>\n",
-       "      <td>0.393064</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.040462</td>\n",
-       "      <td>0.057803</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.028902</td>\n",
-       "      <td>0.046243</td>\n",
+       "      <th>1</th>\n",
+       "      <td>0.005780</td>\n",
+       "      <td>0.005780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1371,9 +1357,24 @@
        "      <td>0.023121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.005780</td>\n",
-       "      <td>0.005780</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0.040462</td>\n",
+       "      <td>0.057803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.398844</td>\n",
+       "      <td>0.393064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.502890</td>\n",
+       "      <td>0.473988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.028902</td>\n",
+       "      <td>0.046243</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1381,26 +1382,27 @@
       ],
       "text/plain": [
        "         q7       q14\n",
-       "5  0.502890  0.473988\n",
-       "4  0.398844  0.393064\n",
-       "3  0.040462  0.057803\n",
-       "6  0.028902  0.046243\n",
+       "1  0.005780  0.005780\n",
        "2  0.023121  0.023121\n",
-       "1  0.005780  0.005780"
+       "3  0.040462  0.057803\n",
+       "4  0.398844  0.393064\n",
+       "5  0.502890  0.473988\n",
+       "6  0.028902  0.046243"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "relative_frequencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 147,
    "id": "31048ec3",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 148,
    "id": "5bb8fd9a",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1506,7 @@
        "6  0.005780  0.011561"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
