--- a/Patient Analysis/correlation analysis/Parameter 4.ipynb
+++ b/Patient Analysis/correlation analysis/Parameter 4.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "06946469",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -27,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d265755c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a59cf20c",
    "metadata": {},
    "outputs": [],
@@ -50,10 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "40772391",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -159,7 +178,7 @@
        "6.0       NaN       NaN  0.023256  0.034682  0.011561  0.017341  0.005780"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "0a1eb9d1",
    "metadata": {},
    "outputs": [
@@ -181,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_20854/4285506181.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_27570/4285506181.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -230,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "ad4bb0b4",
    "metadata": {},
    "outputs": [
@@ -371,7 +390,7 @@
        "max      6.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "b633f610",
    "metadata": {},
    "outputs": [],
@@ -394,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "a08aa9bb",
    "metadata": {},
    "outputs": [
@@ -412,7 +431,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "98f00194",
    "metadata": {},
    "outputs": [],
@@ -464,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "26dde6b6",
    "metadata": {},
    "outputs": [
@@ -488,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "76190896",
    "metadata": {},
    "outputs": [
@@ -515,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3e5359fc",
    "metadata": {},
    "outputs": [],
@@ -533,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "aa40358f",
    "metadata": {},
    "outputs": [
@@ -559,7 +578,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "ced1ef68",
    "metadata": {},
    "outputs": [
@@ -597,7 +616,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "57456d6e",
    "metadata": {},
    "outputs": [],
@@ -631,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "4e46efa9",
    "metadata": {},
    "outputs": [
@@ -658,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "0564c564",
    "metadata": {},
    "outputs": [
@@ -668,7 +687,7 @@
        "F_onewayResult(statistic=1.9647362227252494, pvalue=0.14338200161124257)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "f5209510",
    "metadata": {},
    "outputs": [],
@@ -705,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "326f3010",
    "metadata": {},
    "outputs": [
@@ -726,7 +745,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "4512ee8b",
    "metadata": {},
    "outputs": [
@@ -759,7 +778,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "ce557d26",
    "metadata": {},
    "outputs": [],
@@ -793,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "0d1ec08c",
    "metadata": {},
    "outputs": [
@@ -803,7 +822,7 @@
        "F_onewayResult(statistic=8.912164012247132, pvalue=0.0002090748540394303)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "c1f34bf4",
    "metadata": {},
    "outputs": [
@@ -849,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "5ed2d4f6",
    "metadata": {},
    "outputs": [],
@@ -867,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "e993049d",
    "metadata": {},
    "outputs": [
@@ -888,7 +907,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "10c7c127",
    "metadata": {},
    "outputs": [
@@ -922,7 +941,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "4d165f6c",
    "metadata": {},
    "outputs": [],
@@ -956,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "47d98535",
    "metadata": {},
    "outputs": [
@@ -966,7 +985,7 @@
        "F_onewayResult(statistic=1.8549902828848952, pvalue=0.159644655247117)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "b29511b3",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "b793ed58",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "id": "34d4d99c",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1071,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "id": "799cf33e",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1104,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "id": "4b7c870e",
    "metadata": {},
    "outputs": [],
@@ -1121,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "id": "a1d63c0b",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "id": "5631cf25",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1177,7 @@
        "F_onewayResult(statistic=1.288031170880084, pvalue=0.27850672029224804)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "id": "049f39f2",
    "metadata": {},
    "outputs": [
@@ -4169,7 +4188,7 @@
        "172                                       oxi  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4180,7 +4199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "id": "1ac959d7",
    "metadata": {},
    "outputs": [],
@@ -4194,7 +4213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "id": "b4ed3fb7",
    "metadata": {},
    "outputs": [],
@@ -4206,7 +4225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "id": "f03de5f7",
    "metadata": {},
    "outputs": [
@@ -4227,7 +4246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "id": "0da14aae",
    "metadata": {},
    "outputs": [
@@ -4263,7 +4282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "id": "e6878f05",
    "metadata": {},
    "outputs": [],
@@ -4277,7 +4296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "id": "9f5152d5",
    "metadata": {},
    "outputs": [],
@@ -4289,7 +4308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "id": "1083c35b",
    "metadata": {},
    "outputs": [
@@ -4310,7 +4329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "id": "68c75cfa",
    "metadata": {},
    "outputs": [
