--- a/Patient Analysis/correlation analysis/Parameter 6.ipynb
+++ b/Patient Analysis/correlation analysis/Parameter 6.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "06946469",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -27,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d265755c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a59cf20c",
    "metadata": {},
    "outputs": [],
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "40772391",
    "metadata": {},
    "outputs": [
@@ -138,7 +151,7 @@
        "6.0  0.023256  0.046243       NaN  0.011561"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "0a1eb9d1",
    "metadata": {},
    "outputs": [
@@ -160,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_20735/267276860.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_27825/267276860.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -209,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "ad4bb0b4",
    "metadata": {},
    "outputs": [
@@ -313,7 +326,7 @@
        "max      6.000000    6.000000    5.000000    6.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "b633f610",
    "metadata": {},
    "outputs": [],
@@ -336,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "a08aa9bb",
    "metadata": {},
    "outputs": [
@@ -354,7 +367,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "98f00194",
    "metadata": {},
    "outputs": [],
@@ -406,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "26dde6b6",
    "metadata": {},
    "outputs": [
@@ -430,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "76190896",
    "metadata": {},
    "outputs": [
@@ -457,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3e5359fc",
    "metadata": {},
    "outputs": [],
@@ -475,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "aa40358f",
    "metadata": {},
    "outputs": [
@@ -501,7 +514,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "ced1ef68",
    "metadata": {},
    "outputs": [
@@ -539,7 +552,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "57456d6e",
    "metadata": {},
    "outputs": [],
@@ -573,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "4e46efa9",
    "metadata": {},
    "outputs": [
@@ -600,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "0564c564",
    "metadata": {},
    "outputs": [
@@ -610,7 +623,7 @@
        "F_onewayResult(statistic=0.034282180092945175, pvalue=0.9663055139664021)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "f5209510",
    "metadata": {},
    "outputs": [],
@@ -647,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "326f3010",
    "metadata": {},
    "outputs": [
@@ -668,7 +681,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "4512ee8b",
    "metadata": {},
    "outputs": [
@@ -701,7 +714,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "ce557d26",
    "metadata": {},
    "outputs": [],
@@ -735,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "0d1ec08c",
    "metadata": {},
    "outputs": [
@@ -745,7 +758,7 @@
        "F_onewayResult(statistic=5.0092770184728375, pvalue=0.007700904589083468)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "c1f34bf4",
    "metadata": {},
    "outputs": [
@@ -791,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "5ed2d4f6",
    "metadata": {},
    "outputs": [],
@@ -809,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "e993049d",
    "metadata": {},
    "outputs": [
@@ -830,7 +843,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "10c7c127",
    "metadata": {},
    "outputs": [
@@ -864,7 +877,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "4d165f6c",
    "metadata": {},
    "outputs": [],
@@ -898,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "47d98535",
    "metadata": {},
    "outputs": [
@@ -908,7 +921,7 @@
        "F_onewayResult(statistic=1.8313560817135295, pvalue=0.16337973968004454)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "b29511b3",
    "metadata": {},
    "outputs": [
@@ -955,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "b793ed58",
    "metadata": {},
    "outputs": [],
@@ -973,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "id": "34d4d99c",
    "metadata": {},
    "outputs": [
@@ -994,7 +1007,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "id": "799cf33e",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1040,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "id": "4b7c870e",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "id": "a1d63c0b",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "id": "5631cf25",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1113,7 @@
        "F_onewayResult(statistic=4.398806951617959, pvalue=0.013730476129451484)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "id": "049f39f2",
    "metadata": {},
    "outputs": [
@@ -4111,7 +4124,7 @@
        "172                                       oxi  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4122,7 +4135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "id": "1ac959d7",
    "metadata": {},
    "outputs": [],
@@ -4136,7 +4149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "id": "b4ed3fb7",
    "metadata": {},
    "outputs": [],
@@ -4148,7 +4161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "id": "f03de5f7",
    "metadata": {},
    "outputs": [
@@ -4169,7 +4182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "id": "0da14aae",
    "metadata": {},
    "outputs": [
@@ -4205,7 +4218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "id": "e6878f05",
    "metadata": {},
    "outputs": [],
@@ -4219,7 +4232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "id": "9f5152d5",
    "metadata": {},
    "outputs": [],
@@ -4231,7 +4244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "id": "1083c35b",
    "metadata": {},
    "outputs": [
@@ -4252,7 +4265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "id": "68c75cfa",
    "metadata": {},
    "outputs": [
