--- a/Patient Analysis/correlation analysis/Parameter 8.ipynb
+++ b/Patient Analysis/correlation analysis/Parameter 8.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "06946469",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -27,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d265755c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "a59cf20c",
    "metadata": {},
    "outputs": [],
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "40772391",
    "metadata": {},
    "outputs": [
@@ -124,7 +137,7 @@
        "6  0.005780  0.011561"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "0a1eb9d1",
    "metadata": {},
    "outputs": [
@@ -146,7 +159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_20826/3833826948.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_27969/3833826948.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -195,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "ad4bb0b4",
    "metadata": {},
    "outputs": [
@@ -281,7 +294,7 @@
        "max      6.000000    6.000000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "b633f610",
    "metadata": {},
    "outputs": [],
@@ -304,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "a08aa9bb",
    "metadata": {},
    "outputs": [
@@ -322,7 +335,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "98f00194",
    "metadata": {},
    "outputs": [],
@@ -374,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "26dde6b6",
    "metadata": {},
    "outputs": [
@@ -398,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "76190896",
    "metadata": {},
    "outputs": [
@@ -425,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "3e5359fc",
    "metadata": {},
    "outputs": [],
@@ -443,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "aa40358f",
    "metadata": {},
    "outputs": [
@@ -469,7 +482,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "ced1ef68",
    "metadata": {},
    "outputs": [
@@ -507,7 +520,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "57456d6e",
    "metadata": {},
    "outputs": [],
@@ -541,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "4e46efa9",
    "metadata": {},
    "outputs": [
@@ -568,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "0564c564",
    "metadata": {},
    "outputs": [
@@ -578,7 +591,7 @@
        "F_onewayResult(statistic=0.4397933597748311, pvalue=0.6449046329199781)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "f5209510",
    "metadata": {},
    "outputs": [],
@@ -615,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "326f3010",
    "metadata": {},
    "outputs": [
@@ -636,7 +649,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "4512ee8b",
    "metadata": {},
    "outputs": [
@@ -669,7 +682,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "ce557d26",
    "metadata": {},
    "outputs": [],
@@ -703,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "0d1ec08c",
    "metadata": {},
    "outputs": [
@@ -713,7 +726,7 @@
        "F_onewayResult(statistic=7.56455462447031, pvalue=0.0007138045776433841)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "c1f34bf4",
    "metadata": {},
    "outputs": [
@@ -759,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "5ed2d4f6",
    "metadata": {},
    "outputs": [],
@@ -777,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "e993049d",
    "metadata": {},
    "outputs": [
@@ -798,7 +811,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "10c7c127",
    "metadata": {},
    "outputs": [
@@ -832,7 +845,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "4d165f6c",
    "metadata": {},
    "outputs": [],
@@ -866,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "47d98535",
    "metadata": {},
    "outputs": [
@@ -876,7 +889,7 @@
        "F_onewayResult(statistic=0.5454755447798815, pvalue=0.5805890529346305)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "b29511b3",
    "metadata": {},
    "outputs": [
@@ -923,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "id": "b793ed58",
    "metadata": {},
    "outputs": [],
@@ -941,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "34d4d99c",
    "metadata": {},
    "outputs": [
@@ -962,7 +975,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "799cf33e",
    "metadata": {},
    "outputs": [
@@ -995,7 +1008,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "4b7c870e",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "id": "a1d63c0b",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "id": "5631cf25",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1081,7 @@
        "F_onewayResult(statistic=4.380395481661799, pvalue=0.013972905885867554)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "id": "049f39f2",
    "metadata": {},
    "outputs": [
@@ -4079,7 +4092,7 @@
        "172                                       oxi  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4090,7 +4103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "id": "1ac959d7",
    "metadata": {},
    "outputs": [],
@@ -4104,7 +4117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "id": "b4ed3fb7",
    "metadata": {},
    "outputs": [],
@@ -4116,7 +4129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "id": "f03de5f7",
    "metadata": {},
    "outputs": [
@@ -4137,7 +4150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "id": "0da14aae",
    "metadata": {},
    "outputs": [
@@ -4173,7 +4186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "id": "e6878f05",
    "metadata": {},
    "outputs": [],
@@ -4187,7 +4200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "id": "9f5152d5",
    "metadata": {},
    "outputs": [],
@@ -4199,7 +4212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "id": "1083c35b",
    "metadata": {},
    "outputs": [
@@ -4220,7 +4233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "id": "68c75cfa",
    "metadata": {},
    "outputs": [
