fix working hours problem for staff

--- a/Staff Analysis/Analysis/3. Correlation Analysis/Parameter11_Analysis.ipynb
+++ b/Staff Analysis/Analysis/3. Correlation Analysis/Parameter11_Analysis.ipynb
@@ -10,10 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
       "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
       "  return warn(\n",
-      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
       "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
       "  return warn(\n"
      ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "7c35e898",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "5.0                                           0.184100                "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_32613/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_50094/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "5cdfd994",
    "metadata": {},
    "outputs": [
@@ -1290,13 +1290,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(corr,p-val) = (0.16038775207440487, 0.01446067274406559)\n"
+      "(corr,p-val) = (-0.04061689031252784, 0.5426383861429569)\n"
      ]
     }
    ],
    "source": [
-    "x = wyears['wyears']\n",
-    "y = wyears['Score']\n",
+    "x = whours['whours']\n",
+    "y = whours['Score']\n",
     "#calculation correlation coefficient and p-value between x and y\n",
     "print(\"(corr,p-val) =\",pearsonr(x, y))"
    ]
@@ -8904,8 +8904,8 @@
       "Dep. Variable:                  score   R-squared:                       0.403\n",
       "Model:                            OLS   Adj. R-squared:                  0.154\n",
       "Method:                 Least Squares   F-statistic:                     1.619\n",
-      "Date:                Wed, 25 Jan 2023   Prob (F-statistic):              0.229\n",
-      "Time:                        13:03:09   Log-Likelihood:                -21.361\n",
+      "Date:                Thu, 02 Feb 2023   Prob (F-statistic):              0.229\n",
+      "Time:                        11:58:18   Log-Likelihood:                -21.361\n",
       "No. Observations:                  18   AIC:                             54.72\n",
       "Df Residuals:                      12   BIC:                             60.06\n",
       "Df Model:                           5                                         \n",
