--- a/Staff Analysis/Analysis/3. Correlation Analysis/Parameter10_Analysis.ipynb
+++ b/Staff Analysis/Analysis/3. Correlation Analysis/Parameter10_Analysis.ipynb
@@ -5,7 +5,20 @@
    "execution_count": 1,
    "id": "90313e37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -172,14 +185,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_7517/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n",
-      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
-      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
-      "  return warn(\n",
-      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
-      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
-      "  return warn(\n"
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_50052/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
     {
@@ -1306,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "5cdfd994",
    "metadata": {},
    "outputs": [
@@ -1314,13 +1321,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(corr,p-val) = (0.2416571752529733, 0.00020227391265235762)\n"
+      "(corr,p-val) = (-0.17050739339921042, 0.010063359340784199)\n"
      ]
     }
    ],
    "source": [
-    "x = wyears['wyears']\n",
-    "y = wyears['Score']\n",
+    "x = whours['whours']\n",
+    "y = whours['Score']\n",
     "#calculation correlation coefficient and p-value between x and y\n",
     "print(\"(corr,p-val) =\",pearsonr(x, y))"
    ]
@@ -8928,8 +8935,8 @@
       "Dep. Variable:                  score   R-squared:                       0.436\n",
       "Model:                            OLS   Adj. R-squared:                  0.200\n",
       "Method:                 Least Squares   F-statistic:                     1.852\n",
-      "Date:                Mon, 02 Jan 2023   Prob (F-statistic):              0.177\n",
-      "Time:                        11:52:33   Log-Likelihood:                -17.389\n",
+      "Date:                Thu, 02 Feb 2023   Prob (F-statistic):              0.177\n",
+      "Time:                        11:56:09   Log-Likelihood:                -17.389\n",
       "No. Observations:                  18   AIC:                             46.78\n",
       "Df Residuals:                      12   BIC:                             52.12\n",
       "Df Model:                           5                                         \n",
