--- a/Staff Analysis/Analysis/3. Correlation Analysis/Parameter3_Analysis.ipynb
+++ b/Staff Analysis/Analysis/3. Correlation Analysis/Parameter3_Analysis.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 1,
    "id": "90313e37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -27,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 2,
    "id": "48378195",
    "metadata": {},
    "outputs": [],
@@ -38,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "id": "f9045208",
    "metadata": {},
    "outputs": [],
@@ -49,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 4,
    "id": "7c35e898",
    "metadata": {},
    "outputs": [
@@ -137,7 +150,7 @@
        "5.0                                           0.137500                                                              "
       ]
      },
-     "execution_count": 241,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 5,
    "id": "13bde5e7",
    "metadata": {},
    "outputs": [
@@ -159,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_37936/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_49045/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -208,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 6,
    "id": "c1e8b94b",
    "metadata": {},
    "outputs": [
@@ -223,7 +236,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 7,
    "id": "a89d8d09",
    "metadata": {},
    "outputs": [
@@ -349,7 +362,7 @@
        "max                                             5.000000                                                              "
       ]
      },
-     "execution_count": 244,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 8,
    "id": "802d82c3",
    "metadata": {},
    "outputs": [],
@@ -382,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 9,
    "id": "898d3566",
    "metadata": {},
    "outputs": [
@@ -400,7 +413,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 10,
    "id": "bf66fb9a",
    "metadata": {},
    "outputs": [],
@@ -429,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 11,
    "id": "7a5d0efc",
    "metadata": {},
    "outputs": [],
@@ -456,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 12,
    "id": "0c1fd138",
    "metadata": {},
    "outputs": [
@@ -480,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 13,
    "id": "33020013",
    "metadata": {
     "scrolled": true
@@ -501,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 14,
    "id": "17da153d",
    "metadata": {},
    "outputs": [],
@@ -527,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 15,
    "id": "8e76b708",
    "metadata": {},
    "outputs": [],
@@ -537,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 16,
    "id": "a9299146",
    "metadata": {},
    "outputs": [],
@@ -550,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 17,
    "id": "d5523f7a",
    "metadata": {},
    "outputs": [],
@@ -562,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 18,
    "id": "4c5f939f",
    "metadata": {},
    "outputs": [
@@ -585,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 19,
    "id": "651ea68f",
    "metadata": {},
    "outputs": [
@@ -621,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 20,
    "id": "fa76e1f0",
    "metadata": {},
    "outputs": [],
@@ -637,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 21,
    "id": "4ba78ffd",
    "metadata": {},
    "outputs": [
@@ -660,7 +673,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 22,
    "id": "8fa67e69",
    "metadata": {},
    "outputs": [
@@ -695,7 +708,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 23,
    "id": "a7747b8a",
    "metadata": {},
    "outputs": [],
@@ -735,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 24,
    "id": "3e95c52a",
    "metadata": {},
    "outputs": [
@@ -745,7 +758,7 @@
        "F_onewayResult(statistic=4.586991914779803, pvalue=0.0013972913095951407)"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 25,
    "id": "d774d968",
    "metadata": {},
    "outputs": [
@@ -792,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 26,
    "id": "3438e395",
    "metadata": {},
    "outputs": [],
@@ -808,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 27,
    "id": "e9d971b6",
    "metadata": {},
    "outputs": [
@@ -829,7 +842,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 28,
    "id": "82194011",
    "metadata": {},
    "outputs": [
@@ -862,7 +875,7 @@
        "Name: Score, dtype: float64"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 29,
    "id": "bf93f7fa",
    "metadata": {},
    "outputs": [],
@@ -898,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 30,
    "id": "cd0fb052",
    "metadata": {},
    "outputs": [
@@ -925,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 31,
    "id": "d4920e00",
    "metadata": {},
    "outputs": [
@@ -935,7 +948,7 @@
        "F_onewayResult(statistic=8.018223127393913, pvalue=0.00042841744579444173)"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 32,
    "id": "e82ed474",
    "metadata": {},
    "outputs": [],
@@ -964,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 33,
    "id": "7da4d47a",
    "metadata": {},
    "outputs": [],
@@ -977,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 34,
    "id": "b0901765",
    "metadata": {},
    "outputs": [],
@@ -989,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 35,
    "id": "012a00f8",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 36,
    "id": "3a50a2bc",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 37,
    "id": "229064dd",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 38,
    "id": "31133203",
    "metadata": {},
    "outputs": [],
@@ -1071,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 39,
    "id": "85badee9",
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 40,
    "id": "38db7033",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 41,
    "id": "6541ebb6",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 42,
    "id": "65f2472b",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 43,
    "id": "26e67532",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 44,
    "id": "bc4fb4e3",
    "metadata": {},
    "outputs": [],
@@ -1176,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 45,
    "id": "f3a364c8",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 46,
    "id": "9774223c",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 60,
    "id": "250e6ca1",
    "metadata": {},
    "outputs": [],
@@ -1243,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 61,
    "id": "42bccf56",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 62,
    "id": "70041cde",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 63,
    "id": "5cdfd994",
    "metadata": {},
    "outputs": [
@@ -1276,20 +1289,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(corr,p-val) = (0.20239134466523617, 0.0019469415724697283)\n"
+      "(corr,p-val) = (-0.083308141469052, 0.21115011270432602)\n"
      ]
     }
    ],
    "source": [
-    "x = wyears['wyears']\n",
-    "y = wyears['Score']\n",
+    "x = whours['whours']\n",
+    "y = whours['Score']\n",
     "#calculation correlation coefficient and p-value between x and y\n",
     "print(\"(corr,p-val) =\",pearsonr(x, y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 51,
    "id": "bdb2e844",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 52,
    "id": "79554939",
    "metadata": {},
    "outputs": [
@@ -6018,7 +6031,7 @@
        "243                                  2. Ειδικός ιατρός  "
       ]
      },
-     "execution_count": 289,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6029,7 +6042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 53,
    "id": "4c367ac7",
    "metadata": {},
    "outputs": [],
@@ -6041,7 +6054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 54,
    "id": "15f91f18",
    "metadata": {},
    "outputs": [
@@ -8402,7 +8415,7 @@
        "243  2.000000  "
       ]
      },
-     "execution_count": 291,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8415,7 +8428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 55,
    "id": "694d904f",
    "metadata": {},
    "outputs": [
@@ -8443,7 +8456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 56,
    "id": "03fc0c50",
    "metadata": {},
    "outputs": [],
@@ -8459,7 +8472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 57,
    "id": "4248c2a3",
    "metadata": {},
    "outputs": [
@@ -8854,7 +8867,7 @@
        "229                 0                       0  "
       ]
      },
-     "execution_count": 294,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8865,7 +8878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 58,
    "id": "88e5225b",
    "metadata": {},
    "outputs": [],
@@ -8877,7 +8890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 59,
    "id": "0b8e7bad",
    "metadata": {},
    "outputs": [
@@ -8890,8 +8903,8 @@
       "Dep. Variable:                  score   R-squared:                       0.495\n",
       "Model:                            OLS   Adj. R-squared:                  0.285\n",
       "Method:                 Least Squares   F-statistic:                     2.356\n",
-      "Date:                Tue, 20 Dec 2022   Prob (F-statistic):              0.104\n",
-      "Time:                        12:21:19   Log-Likelihood:                -18.680\n",
+      "Date:                Thu, 02 Feb 2023   Prob (F-statistic):              0.104\n",
+      "Time:                        11:02:36   Log-Likelihood:                -18.680\n",
       "No. Observations:                  18   AIC:                             49.36\n",
       "Df Residuals:                      12   BIC:                             54.70\n",
       "Df Model:                           5                                         \n",
