--- a/Staff Analysis/Analysis/3. Correlation Analysis/Parameter5_Analysis.ipynb
+++ b/Staff Analysis/Analysis/3. Correlation Analysis/Parameter5_Analysis.ipynb
@@ -12,6 +12,9 @@
      "text": [
       "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
       "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
       "  return warn(\n"
      ]
     }
@@ -169,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_49947/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_49487/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -1278,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "5cdfd994",
    "metadata": {},
    "outputs": [
@@ -1286,13 +1289,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(corr,p-val) = (0.181737794736701, 0.005497233194238626)\n"
+      "(corr,p-val) = (-0.054404002785070744, 0.4146384558999528)\n"
      ]
     }
    ],
    "source": [
-    "x = wyears['wyears']\n",
-    "y = wyears['Score']\n",
+    "x = whours['whours']\n",
+    "y = whours['Score']\n",
     "#calculation correlation coefficient and p-value between x and y\n",
     "print(\"(corr,p-val) =\",pearsonr(x, y))"
    ]
@@ -8900,8 +8903,8 @@
       "Dep. Variable:                  score   R-squared:                       0.306\n",
       "Model:                            OLS   Adj. R-squared:                  0.017\n",
       "Method:                 Least Squares   F-statistic:                     1.060\n",
-      "Date:                Thu, 22 Dec 2022   Prob (F-statistic):              0.429\n",
-      "Time:                        11:42:26   Log-Likelihood:                -15.671\n",
+      "Date:                Thu, 02 Feb 2023   Prob (F-statistic):              0.429\n",
+      "Time:                        11:26:25   Log-Likelihood:                -15.671\n",
       "No. Observations:                  18   AIC:                             43.34\n",
       "Df Residuals:                      12   BIC:                             48.69\n",
       "Df Model:                           5                                         \n",
