--- a/Staff Analysis/Analysis/3. Correlation Analysis/Parameter9_Analysis.ipynb
+++ b/Staff Analysis/Analysis/3. Correlation Analysis/Parameter9_Analysis.ipynb
@@ -5,7 +5,20 @@
    "execution_count": 1,
    "id": "90313e37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -172,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_58691/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/q9/jvtr2p8s6sn6wt933mh1tyfm0000gn/T/ipykernel_50022/2184165003.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n"
      ]
     },
@@ -418,15 +431,6 @@
    "id": "898d3566",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
-      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
-      "  return warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1309,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "5cdfd994",
    "metadata": {},
    "outputs": [
@@ -1317,13 +1321,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(corr,p-val) = (0.25547765950867074, 8.291522128451984e-05)\n"
+      "(corr,p-val) = (-0.05745013892211611, 0.3889589110524429)\n"
      ]
     }
    ],
    "source": [
-    "x = wyears['wyears']\n",
-    "y = wyears['Score']\n",
+    "x = whours['whours']\n",
+    "y = whours['Score']\n",
     "#calculation correlation coefficient and p-value between x and y\n",
     "print(\"(corr,p-val) =\",pearsonr(x, y))"
    ]
@@ -8931,8 +8935,8 @@
       "Dep. Variable:                  score   R-squared:                       0.745\n",
       "Model:                            OLS   Adj. R-squared:                  0.638\n",
       "Method:                 Least Squares   F-statistic:                     7.004\n",
-      "Date:                Tue, 27 Dec 2022   Prob (F-statistic):            0.00280\n",
-      "Time:                        12:03:32   Log-Likelihood:                -9.2309\n",
+      "Date:                Thu, 02 Feb 2023   Prob (F-statistic):            0.00280\n",
+      "Time:                        11:54:43   Log-Likelihood:                -9.2309\n",
       "No. Observations:                  18   AIC:                             30.46\n",
       "Df Residuals:                      12   BIC:                             35.80\n",
       "Df Model:                           5                                         \n",
